# Dev-Agent

./: .gitignore  2048  3072  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONVENTIONS.md  DECISIONS.md  INTERFACES.md  LICENSE  README.md  VERSION  conftest.py  pyproject.toml  requirements.txt
CraftedAgent/: Package.swift
CraftedAppShell/: .gitkeep
crafted-coordination/: BUILD_LEDGER.json
crafted-docs/: GitHub-Integration-Lessons-Learned.docx  GitHub-Integration-Lessons-Learned.md  TRD-1-macOS-Application-Shell-Crafted.md  TRD-10-Document-Store-Crafted.docx  TRD-10-Document-Store-Crafted.md  TRD-11-Security-Threat-Model-Crafted.md  TRD-12-Backend-Runtime-Startup-Crafted.md  TRD-13-Recovery-State-Management-Crafted.md  TRD-14-Code-Quality-CI-Pipeline-Crafted.docx  TRD-14-Code-Quality-CI-Pipeline-Crafted.md  TRD-15-Agent-Operational-Runbook-Crafted.docx  TRD-15-Agent-Operational-Runbook-Crafted.md  TRD-16-Agent-Testing-and-Validation-Crafted.md  TRD-17-Self-Healing-Software-Crafted.md  TRD-2-Consensus-Engine-Crafted.md  TRD-3-Build-Pipeline-Crafted.docx  TRD-3-Build-Pipeline-Crafted.md  TRD-4-Multi-Agent-Coordination-Crafted.md  TRD-5-GitHub-Integration-Crafted.md  TRD-6-Holistic-Code-Review-Crafted.md  TRD-7-TRD-Development-Workflow-Crafted.docx  TRD-7-TRD-Development-Workflow-Crafted.md  TRD-8-UIUX-Design-System-Crafted.docx  TRD-8-UIUX-Design-System-Crafted.md  TRD-9-Mac-CI-Runner-Crafted.md
crafted-standards/: ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md  INTERFACES.md
docs/: BRANCH_CONTEXT.md  CONFLICT_RESOLUTION.md  ConsensusDevAgent_CONTEXT.md  Crafted_CONTEXT.md  PRODUCT_IDENTITY.md
forge-coordination/: BUILD_LEDGER.json
forge-docs/: GitHub-Integration-Lessons-Learned.md  TRD-1-macOS-Application-Shell-Crafted.docx  TRD-1-macOS-Application-Shell-Crafted.md  TRD-1-macOS-Application-Shell.docx  TRD-1-macOS-Application-Shell.md  TRD-10-Document-Store-Crafted.md  TRD-10-Document-Store.docx  TRD-10-Document-Store.md  TRD-11-Security-Threat-Model-Crafted.docx  TRD-11-Security-Threat-Model-Crafted.md  TRD-11-Security-Threat-Model.docx  TRD-11-Security-Threat-Model.md  TRD-12-Backend-Runtime-Startup-Crafted.docx  (+54 more)
(+45 files in other folders)
