# FILE: pyproject.toml
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crafted-dev-agent"
version = "38.153.0"
description = "Crafted Dev Agent - AI-powered development assistant"
requires-python = ">= 3.12"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

# FILE: requirements.txt
anthropic>=0.34.0
openai>=1.40.0
PyGithub>=2.3.0
faiss-cpu>=1.8.0
sentence-transformers>=3.0.0
python-docx>=1.1.0
pdfminer.six>=20231228
pyyaml>=6.0.1
ruff>=0.5.0
pytest>=8.0.0
numpy>=1.26.0

# FILE: conftest.py
# Root conftest.py for pytest discovery.
