[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crafted-agent-backend"
description = "Crafted Dev Agent -- native macOS AI coding system Python backend"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "jsonschema>=4.20.0",
    "pyyaml>=6.0.1",
    "dataclasses-json>=0.6.0",
]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"